# llm_playground

./: Cargo.toml  justfile
command_line_tools/: Cargo.toml
command_line_tools/src/utils/: extract_text.rs  mod.rs
python/: demo.py
web/: prod.sh  test.sh
web/frontend/: Cargo.toml  index.html
web/frontend/src/: main.rs
web/server/: Cargo.toml
web/server/src/: main.rs  query_qdrant_db.rs
