[package]
name = "llm_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
glob = "0.3.1"
llm-chain = "0.12.3"
llm-chain-openai = "0.12.3"
tiktoken-rs = "0.5.3"
lopdf = "0.31.0"
prost = "0.12.1"
qdrant-client = "1.1.2"
quick-xml = "0.31.0"
rayon = "1.7.0"
rustyline = { version = "11.0.0", features = ["with-file-history"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
shellexpand = "3.1.0"
tokio = { version = "1.28.1", features = ["full"] }
