[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.0", features = ["full"] }
rustc-hash = "1.1.0"
rayon = "1.5.2"
serde_json = "1.0.83"
serde = { version = "1.0.117", features = ["derive", "rc"] }
tower-http = { version = "0.5.0", features = ["cors", "trace", "fs"] }
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
svg = "*"
clap = { version = "4.3.0", features = ["derive"] }
serde_qs = "0.12.0"
serde_with = "3.0.0"
anyhow = "1.0.71"
prost = "0.12.3"
qdrant-client = "1.1.2"
shellexpand = "3.1.0"
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"
sqlx ={ version= "0.7.3", features = ["sqlite", "runtime-async-std-rustls"]}
